# tidyxbrl

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  real_estate_analysis_test.ipynb  requirements.txt  setup.cfg
Scripts/: read_xbrl.py  read_xbrlxml.py  test.py  xbrl_api.py
src/: __init__.py
src/config/: default_headers.py
src/tidyedgar/: __init__.py  edgar_apiquery.py
src/tidyxbrl/: __init__.py  edgar_cik.py  edgar_frames.py  edgar_query.py  edgar_querycik.py  edgar_queryframes.py  xbrl_apikey.py  xbrl_apiquery.py  xbrl_classes.py  xbrl_parse.py  xbrl_query.py
src/tidyxbrl.egg-info/: PKG-INFO
tests/: conftest.py  real_estate_analysis_test.ipynb  test_api.py  test_credentials.yml  test_edgar_frames.py  test_edgar_query.py  test_edgar_queryframes.py  test_xbrl_parse.py  test_xbrl_query.py
