[project]
name = "tidyxbrl"
version = "1.2.13"
authors = [
  { name="Ryan McDonald", email="ryancmcdonald@gmail.com" },
]
description = "A python package to parse the XBRL file format & interface with XBRL APIs in a tidy format. A powerful tool for automated financial analysis, accounting, and investment research using Pandas."
readme = "README.md"
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Natural Language :: English"
]
dependencies = [
    "beautifulsoup4==4.11.2",
    "bs4==0.0.1",
    "certifi==2023.7.22",
    "charset-normalizer==3.0.1",
    "idna==3.7",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "python-dateutil==2.8.2",
    "pytz==2022.7.1",
    "requests==2.32.2",
    "six==1.16.0",
    "soupsieve==2.4",
    "tqdm==4.66.3",
    "urllib3==1.26.18",
    "PyYAML>=5.4.1",
    "lxml>=4.9.2",
    "tidyxbrl>=1.0.2",
    "httpx>=0.27.0"
]

[project.urls]
Homepage = "https://github.com/cowboycodeman/tidyxbrl/"
Issues = "https://github.com/cowboycodeman/tidyxbrl/issues"