[metadata]
name = tidyxbrl
version = 0.1.00
author = Ryan McDonald
author_email = ryancmcdonald@gmail.com
description = A package to parse the XBRL file format & interface with XBRL APIs in a tidy format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cowboycodeman/tidyxbrl/
project_urls =
    Bug Tracker = https://github.com/cowboycodeman/tidyxbrl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas 
    numpy
    requests
    bs4
    tqdm

[options.packages.find]
where = src
include = 
    tidyxbrl*

